--- a/Mat3am Elhabaib/Views/User/EditUserProfile.cshtml
+++ b/Mat3am Elhabaib/Views/User/EditUserProfile.cshtml
@@ -1,54 +1,60 @@
 ﻿@using Mat3am_Elhabaib.DataBase.ModelVM
 @model EditUser
 @{
-    ViewData["Title"] = "EditUserProfile";
+    ViewData["Title"] = "Edit User Profile";
 }
 
-
-<!-- Navigation Bar -->
+<!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 <div class="blurred-background">
-    <!-- Register Form -->
     <div class="form-section d-flex justify-content-center align-items-center">
-        <div class="col-md-5 p-4 shadow-sm rounded form-container" style="padding-top:0px; margin-bottom:0px">
-            <p class="text-brown text-center create-account-heading" style="font-family: 'Times New Roman', serif; font-size: 30px; color: #EFEEEA;         font:bold;
- "> Edit Your Profile 
-            <form asp-action="EditUserProfile" asp-controller="User" style="border: none; padding-left:15px; padding-right:15px; margin-top:5px; ">
-                <div asp-validation-summary="ModelOnly" class="text-dark-brown"></div>
+        <div class="col-md-5 p-4 shadow-sm rounded form-container">
+            <h2 class="text-brown text-center create-account-heading mb-4" style="font-family:'Times New Roman', serif;">
+                Edit Your Profile <i class="bi bi-person-lines-fill"></i>
+            </h2>
+
+            <form asp-action="EditUserProfile" asp-controller="User" style="padding: 0 15px;">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
                 <div class="form-group mb-3">
-                    <label asp-for="UserName" class="control-label text-darker-brown">User Name</label>
+                    <label asp-for="UserName" class="text-darker-brown">User Name</label>
                     <input asp-for="UserName" class="form-control transparent-input border-dark-brown" autocomplete="off" />
                     <span asp-validation-for="UserName" class="text-dark-brown"></span>
                 </div>
+
                 <div class="form-group mb-3">
-                    <label asp-for="OldPasswrd" class="control-label text-darker-brown"> Old Password <i class="bi bi-lock"></i></label>
-                    <input asp-for="OldPasswrd"class="form-control transparent-input border-dark-brown"
-         type="password"
-                           autocomplete="new-password" />                    <span asp-validation-for="OldPasswrd" class="text-dark-brown"></span>
+                    <label asp-for="OldPasswrd" class="text-darker-brown">Old Password <i class="bi bi-lock"></i></label>
+                    <input asp-for="OldPasswrd" class="form-control transparent-input border-dark-brown" type="password" autocomplete="new-password" />
+                    <span asp-validation-for="OldPasswrd" class="text-dark-brown"></span>
                 </div>
+
                 <div class="form-group mb-3">
-                    <label asp-for="NewPassword" class="control-label text-darker-brown"> New Password <i class="bi bi-lock"></i></label>
+                    <label asp-for="NewPassword" class="text-darker-brown">New Password <i class="bi bi-lock"></i></label>
                     <input asp-for="NewPassword" class="form-control transparent-input border-dark-brown" type="password" autocomplete="off" />
                     <span asp-validation-for="NewPassword" class="text-dark-brown"></span>
                 </div>
+
                 <div class="form-group mb-3">
-                    <label asp-for="ConfirmPassword" class="control-label text-darker-brown"> Confirm Password <i class="bi bi-lock"></i></label>
+                    <label asp-for="ConfirmPassword" class="text-darker-brown">Confirm Password <i class="bi bi-lock"></i></label>
                     <input asp-for="ConfirmPassword" class="form-control transparent-input border-dark-brown" type="password" autocomplete="off" />
                     <span asp-validation-for="ConfirmPassword" class="text-dark-brown"></span>
                 </div>
+
                 <div class="form-group mb-3">
-                    <label asp-for="Location" class="control-label text-darker-brown">Location <i class="bi bi-geo-alt-fill"></i></label>
+                    <label asp-for="Location" class="text-darker-brown">Location <i class="bi bi-geo-alt-fill"></i></label>
                     <input asp-for="Location" class="form-control transparent-input border-dark-brown" autocomplete="off" />
                     <span asp-validation-for="Location" class="text-dark-brown"></span>
                 </div>
+
                 <div class="form-group mb-3">
-                    <label asp-for="Email" class="control-label text-darker-brown"> Email <i class="bi bi-envelope"></i></label>
+                    <label asp-for="Email" class="text-darker-brown">Email <i class="bi bi-envelope"></i></label>
                     <input asp-for="Email" class="form-control transparent-input border-dark-brown" autocomplete="off" />
                     <span asp-validation-for="Email" class="text-dark-brown"></span>
                 </div>
+
                 <div class="form-group mb-3">
-                    <label asp-for="PhoneNumber" class="control-label text-darker-brown">Phone Number <i class="bi bi-phone"></i></label>
+                    <label asp-for="PhoneNumber" class="text-darker-brown">Phone Number <i class="bi bi-phone"></i></label>
                     <input asp-for="PhoneNumber" class="form-control transparent-input border-dark-brown" autocomplete="off" />
                     <span asp-validation-for="PhoneNumber" class="text-dark-brown"></span>
                 </div>
@@ -56,83 +62,26 @@
                 <div class="form-group mb-4">
                     <input class="button1 w-100" type="submit" value="Update" />
                 </div>
-                <div class="form-group mb-4">
-                    <a asp-action="Index" asp-controller="Home" class="button1 w-100"> Cancel </a>
+
+                <div class="form-group mb-2">
+                    <a asp-action="Index" asp-controller="Home" class="button1 w-100 text-center">Cancel</a>
                 </div>
             </form>
         </div>
     </div>
-
-
 </div>
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
 }
+
 <style>
-    .navbar {
-        padding: 5px;
-        width: 100%;
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        z-index: 1000;
-    }
-
-    .bg-brown {
-        background-color: #865439;
-    }
-
-    .navbar-brand, .nav-link {
-        font-size: 18px;
-    }
-
-        .nav-link:hover {
-            color: #FFF8E7 !important;
-        }
-
-
-    .create-account-heading {
-        margin-top: 0;
-        font-size: 24px;
-    }
-
-    .form-section {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        border-color:aliceblue;
-    }
-
-    .button1 {
-        background-color: #FCB454;
-        border: none;
-        color: #FFF8E7;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 20px;
-        width: 100%;
-        border-radius: 10px;
-    }
-
-        .button1:hover {
-            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
-            transition: all 0.3s ease;
-        }
-
     body {
         height: 100%;
         overflow-x: hidden;
-        font:bold;
         margin: 0;
-        padding: 0;
-        padding-top: 100px;
-        padding-bottom: 100px;
-        padding-right: 120px;
+        padding: 100px 120px 100px 0;
+        font-weight: bold;
     }
 
     .blurred-background {
@@ -156,24 +105,24 @@
             filter: blur(7px);
             z-index: -1;
             opacity: 0.8;
-            width: 100vw;
-            height: 100vh;
         }
 
     .form-section {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
         position: relative;
         z-index: 1;
     }
 
-    .text-brown {
-        color: #F8F4E1;
+    .form-container {
+        max-width: 600px;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 10px;
     }
 
-    .text-darker-brown {
-        color: #F8F4E1;
-    }
-
-    .text-dark-brown {
+    .text-brown, .text-darker-brown, .text-dark-brown {
         color: #F8F4E1;
     }
 
@@ -200,32 +149,24 @@
             color: #FCB454;
         }
 
-    .row {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .create-account-heading {
+        font-size: 28px;
+        color: #EFEEEA;
     }
 
-    .shadow-sm {
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .form-group {
-        margin-bottom: 15px;
-    }
-
-    a {
+    .button1 {
+        background-color: #FCB454;
+        border: none;
+        color: #FFF8E7;
+        padding: 10px 20px;
+        font-size: 20px;
+        border-radius: 10px;
+        display: inline-block;
         text-decoration: none;
     }
 
-        a:hover {
-            color: #FCB454;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        .button1:hover {
+            box-shadow: 0 12px 16px rgba(0, 0, 0, 0.24), 0 17px 50px rgba(0, 0, 0, 0.19);
+            transition: all 0.3s ease;
         }
-
-    .form-container {
-        max-width: 600px;
-        padding: 20px;
-    }
-
 </style>
